--- a/danube-bean-console/pom.xml
+++ b/danube-bean-console/pom.xml
@@ -48,12 +48,17 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
-  </repositories>
+    <repository>
+      <id>mvn.sonner.com.br</id>
+      <name>mvn.sonner.com.br</name>
+      <url>http://mvn.sonner.com.br/~maven</url>
+    </repository>
+   </repositories>
 
   <!--  convenience to define GWT version in one place -->
   <properties>
     <gwtVersion>2.7.0</gwtVersion>
-    <smartClientGWTVersion>4.0</smartClientGWTVersion>
+    <smartClientGWTVersion>4.1p</smartClientGWTVersion>
   </properties>
 
   <dependencies>
@@ -207,8 +212,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
+          <source>1.6</source>
+          <target>1.6</target>
         </configuration>
       </plugin>
     </plugins>
