--- a/pom.xml
+++ b/pom.xml
@@ -384,7 +384,7 @@
   <distributionManagement>
     <site>
       <id>abstracthorizon.site</id>
-      <url>scpexe://server.creative-sphere.com/srv/www.abstracthorizon.org/html/danube</url>
+      <url>scp://server.creative-sphere.com/srv/www.abstracthorizon.org/html/danube</url>
     </site>
   </distributionManagement>
 
